[project]
name = "iarrows"
version = "0.1.0"
description = "Draw and edit interactive arrows in Matplotlib figures for Jupyter notebooks"
authors = [
    {name = "Daniel Gomez"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
